# ico

./: CMakeLists.txt  ico.pro
forms/: mainwindow.ui
include/: icowidget.h  mainwindow.h  version.h
resources/: Lng_English.qm  Lng_English.ts  Lng_Portugues.qm  Lng_Portugues.ts  Lng_Russian.qm  Lng_Russian.ts  Lng_Ukrainian.qm  Lng_Ukrainian.ts  res.qrc
src/: icowidget.cpp  mainwindow.cpp
